@@ -1,3 +1,11 @@
+2007-04-20  Kenichi Handa  <handa@m17n.org>
+
+	* input.c (config_command): Fix previous change again.
+	(config_variable): Likewise.
+	(minput_config_command): Fix for the case of setting back to
+	default.
+	(minput_config_variable): Likewise.
+
 2007-04-05  Kenichi Handa  <handa@m17n.org>
 
 	* input.c (config_command): Fix previous change.
